fix: add x-overflow

--- a/style.scss
+++ b/style.scss
@@ -46,6 +46,7 @@ html {
 body {
 	margin: 0 auto;
 	font-family: $font;
+	overflow-x: hidden;
 }
 
 .header-title {
